feat: url control tabs change

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -663,6 +663,7 @@ body {
       flex: 1 1 100%;
       margin-top: 0;
       text-align: center;
+      text-transform: capitalize;
 
       a {
         border-bottom: .1rem solid $border-color;
