fix: image layzload && feeds throttle

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -712,6 +712,7 @@ body {
     padding: .5rem 1rem;
 
     .collection-item {
+      position: relative;
       flex: 0 0;
       height: 2rem;
       margin-right: .5rem;
