fix: profile improve

--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -766,6 +766,7 @@ body {
     }
 
     .nft-list {
+      position: relative;
       display: flex;
       flex-wrap: wrap;
       margin: 0 -.5rem;
