--- a/styles/scss/panel/_panel.scss
+++ b/styles/scss/panel/_panel.scss
@@ -388,17 +388,6 @@
 //     }
 }
 
-.profile-container {
-    padding: 0;
-    box-sizing: border-box;
-
-    .profile-basic-info-loading{
-        position: relative;
-        min-height: 30vh;
-        margin-bottom: 40px;
-    }
-}
-
 .feeds-container-box {
     padding: 0;
 
@@ -409,7 +398,7 @@
         text-transform: uppercase;
     }
 
-    .feeds-container {
+    .social-feeds-list {
         max-width: 100%;
         margin-top: 20px;
         max-height: 80vh;
@@ -426,107 +415,6 @@
             margin-top: 10px;
         }
 
-        .feed-item-box {
-            display: flex;
-            width: 100%;
-            align-items: flex-start;
-            gap: 10px;
-
-            .feed-type-badge {
-                width: 24px;
-                height: 24px;
-                background: rgba(18, 18, 18, 0.08);
-                box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
-                border-radius: 8px;
-            }
-
-            .feed-item {
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-                max-width: 90%;
-
-                .feed-item-header {
-                    width: 100%;
-                    display: flex;
-                    align-items: center;
-                    gap: 10px;
-
-                    .feed-type-intro {
-                        display: flex;
-                        align-items: center;
-                        font-weight: 400;
-                        font-size: 14px;
-                        line-height: 22px;
-
-                        .strong {
-                            font-weight: 900;
-                            margin: 0 4px;
-                        }
-                    }
-                }
-
-                .feed-item-main {
-                    display: flex;
-                    align-items: center;
-                    gap: 10px;
-
-                    .feed-nft-img {
-                        position: relative;
-                        width: 40px;
-                        height: 40px;
-                        min-width: 40px;
-                        min-height: 40px;
-                        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
-                        border-radius: 12px;
-
-                        img {
-                            box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
-                            border-radius: 12px;
-                        }
-                    }
-
-                    .feed-swap-img {
-                        width: 24px;
-                        box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.15);
-                        border-radius: 12px;
-                        background: transparent;
-                    }
-
-                    .feed-nft-info {
-                        display: flex;
-                        flex-direction: column;
-
-                        .nft-title {
-                            font-weight: 700;
-                            font-size: 14px;
-                            line-height: 22px;
-                            display: -webkit-box;
-                            -webkit-box-orient: vertical;
-                            -webkit-line-clamp: 1;
-                            overflow: hidden;
-                        }
-
-                        .nft-subtitle {
-                            font-weight: 400;
-                            display: -webkit-box;
-                            -webkit-box-orient: vertical;
-                            -webkit-line-clamp: 2;
-                            overflow: hidden;
-                        }
-
-                        .nft-collection-title {
-                            font-weight: 400;
-                            font-size: 12px;
-                            line-height: 20px;
-                            color: #121212;
-                            opacity: 0.5;
-                        }
-                    }
-                }
-            }
-
-
-        }
+        
     }
 }
