--- a/styles/scss/web3bio.scss
+++ b/styles/scss/web3bio.scss
@@ -617,8 +617,9 @@ body {
       margin-right: .5rem;
       width: 2.4rem;
 
-      img {
+      .img-responsive {
         border-radius: .5rem;
+        font-size: 2rem;
       }
     }
   }
@@ -836,11 +837,16 @@ body {
 .collection-switcher {
   background: #fff;
   box-shadow: 0 .1rem 1rem rgba($dark-color, .1);
+  user-select: none;
 
   .collection-list {
     display: flex;
     overflow: auto hidden;
     padding: .25rem 1rem;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   
     .collection-item {
       border-radius: .6rem;
@@ -865,9 +871,13 @@ body {
         height: 2.4rem;
         width: 2.4rem;
   
-        img {
+        .img-responsive {
           border-radius: .5rem;
           box-shadow: 0 .1rem .8rem rgba($dark-color, .15);
+          font-size: 1.6rem;
+          height: 2.4rem;
+          object-fit: cover;
+          width: 2.4rem;
         }
       }
     }
@@ -878,7 +888,7 @@ body {
   flex: 1 1;
   height: 100%;
   overflow-y: auto;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
   
   .nft-collection-list {
     .nft-collection-item {
@@ -896,9 +906,10 @@ body {
         margin-right: .25rem;
         width: 1.2rem;
 
-        img {
+        .img-responsive {
           border-radius: .4rem;
           box-shadow: 0 .2rem .8rem rgba($dark-color, .2);
+          font-size: 1rem;
         }
       }
 
@@ -931,7 +942,7 @@ body {
         .img-container {
           margin-bottom: .5rem;
 
-          img {
+          .img-responsive {
             border-radius: .5rem;
             box-shadow: 0 .2rem 1rem rgba($dark-color, .15), 0 .05rem .2rem rgba($dark-color, .05);
             object-fit: cover;
@@ -1030,6 +1041,29 @@ body {
 
 .bg-pride {
   background: linear-gradient(70deg, $pride-color-1 -10%, $pride-color-2 5%, $pride-color-3 36%, $pride-color-4 50%, $pride-color-5 63%, $pride-color-6 95%, $pride-color-7 110%);
+}
+
+.img-placeholder {
+  align-items: center;
+  display: flex;
+  flex: 0 0;
+  height: 100%;
+  justify-content: center;
+  opacity: .75;
+  padding: .25rem;
+  position: relative;
+  width: 100%;
+
+  &[data-initial]::before {
+    color: $light-color;
+    content: attr(data-initial);
+    font-size: .5em;
+    font-weight: 700;
+    line-height: .5em;
+    text-shadow: 0 .1rem .4rem rgba($dark-color, .2);
+    text-transform: uppercase;
+    z-index: $zindex-0;
+  }
 }
 
 .tooltip-copy {
